--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Your Portfolio</title>
-</head>
+    <title>Frago</title</head>
 <body>
     <header>
         <nav>
@@ -19,14 +18,14 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>your name</h1>
+        <h1>JGenelyn N. Frago</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>hacker</p>
     </section>
 
     <section id="portfolio" class="portfolio">
@@ -46,7 +45,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. genfrago@gmail.com</p>
     </section>
 
     <footer>
@@ -56,7 +55,8 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p> All rights reserved.</p>
     </footer>
 </body>
 </html>
+
