--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>JGenelyn N. Frago</h1>
+        <h1>Jean Carlo D. Yap</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
