modify About Me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>hacker</p>
+        <p>I'm Jean Carlo D. Yap from BSIT</p>
     </section>
 
     <section id="portfolio" class="portfolio">
