--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Project Polomize</h3>
+            <p>This project won in our UI/UX</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Project Document Checklist</h3>
+            <p>This project about checking the documents</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
