modify Contact Me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. genfrago@gmail.com</p>
+        <p>Please contact me on my email: yapjeancarlo@gmail.com github: https://github.com/yapcarloo</p>
     </section>
 
     <footer>
